video youtube colocado

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="divStaraVlcHeader">
-            <img src="logo.png" width="900">
+            <img src="logo2.jpeg" width="900">
         </div>
     </header>
 
@@ -29,7 +29,8 @@
                 <iframe src="https://www.meteoblue.com/pt/tempo/widget/daily/coroados_brasil_3465495?geoloc=fixed&days=5&tempunit=CELSIUS&windunit=KILOMETER_PER_HOUR&precipunit=MILLIMETER&coloured=coloured&pictoicon=0&pictoicon=1&maxtemperature=0&maxtemperature=1&mintemperature=0&mintemperature=1&windspeed=0&windspeed=1&windgust=0&winddirection=0&uv=0&humidity=0&precipitation=0&precipitation=1&precipitationprobability=0&precipitationprobability=1&spot=0&pressure=0&layout=light"  frameborder="0" scrolling="NO" allowtransparency="true" sandbox="allow-same-origin allow-scripts allow-popups allow-popups-to-escape-sandbox" style="width: 270px; height: 420px"></iframe><div><!-- DO NOT REMOVE THIS LINK --><a href="https://www.meteoblue.com/pt/tempo/semana/coroados_brasil_3465495?utm_source=weather_widget&utm_medium=linkus&utm_content=daily&utm_campaign=Weather%2BWidget" target="_blank" rel="noopener"></a></div>
             </div>
             <div>
-                <video src="/videos/imperador3ponto0.mp4" muted autoplay loop width="1360" height="800"></video>
+                <!-- <video src="/videos/imperador3ponto0.mp4" muted autoplay loop width="1360" height="800"></video> -->
+                <iframe width="1360" height="800" src="https://www.youtube.com/embed/videoseries?list=PLzQH43U9bc6if5v3RSiCTaoIMthDYoyqS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay=1; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div>
                 <!-- Widgets Produtos Cepea - www.cepea.esalq.com.br/br/widget.aspx -->
