--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="divStaraVlcHeader">
-            <img src="logo2.jpeg" width="900">
+            <img src="vlc.jpeg" width="900">
         </div>
     </header>
 
