img consorcio added

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
             <div>
                 <!-- Widgets Produtos Cepea - www.cepea.esalq.com.br/br/widget.aspx -->
 <script type="text/javascript" src="https://www.cepea.esalq.usp.br/br/widgetproduto.js.php?fonte=verdana&tamanho=12&largura=200px&corfundo=dbd6b2&cortexto=333333&corlinha=ede7bf&id_indicador%5B%5D=53&id_indicador%5B%5D=3&id_indicador%5B%5D=2&id_indicador%5B%5D=12&id_indicador%5B%5D=92&id_indicador%5B%5D=77"></script>
+                <br>
+                <img src="fotos/consorcio.jpeg" width="275px">
             </div>
     </main>
 
