--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
             </div>
     </main>
 
+    <div style="background-color: #005C2A; color: #005C2A; padding: 15px; width: 1895px;"></div> 
+
 <div class="divInfos">
     <div id="data-hora"></div>
     <script>
@@ -60,7 +62,7 @@
             document.getElementById('data-hora').innerHTML = dataHora;
         }, 1000);
     </script>
-    <b>Comercial: (18) 99641-6309 -- Peças: (18) 99652-3598</b>
+    <b>Comercial: <img src="icones/wpp.png" width="20px"> (18) 99641-6309 -- Peças: <img src="icones/wpp.png" width="20px"> (18) 99652-3598</b>
 </div>
 <div class="meuNome">
     Feito por: Felipe Freitas
