--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     </script>
     <b>Comercial: <img src="icones/wpp.png" width="20px"> (18) 99641-6309 -- Peças: <img src="icones/wpp.png" width="20px"> (18) 99652-3598</b>
 </div>
-<div class="meuNome">
-    Feito por: Felipe Freitas
-</div>
+<!-- <div class="meuNome"> -->
+    <!-- Feito por: Felipe Freitas -->
+<!-- </div> -->
 </body>
 </html>
