aviso de ferias

--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
             document.getElementById('data-hora').innerHTML = dataHora;
         }, 1000);
     </script>
-    <b>Comercial: <img src="icones/wpp.png" width="20px"> (18) 99641-6309 -- Peças: <img src="icones/wpp.png" width="20px"> (18) 99652-3598</b>
+    <!-- <b>Comercial: <img src="icones/wpp.png" width="20px"> (18) 99641-6309 -- Peças: <img src="icones/wpp.png" width="20px"> (18) 99652-3598</b> -->
+    <div class="divFerias">
+    ATENÇÃO!! ESTAREMOS DE FÉRIAS DO DIA 20/12/21 ATÉ 05/01/2022!!
+    </div>
 </div>
 <!-- <div class="meuNome"> -->
     <!-- Feito por: Felipe Freitas -->
