Returning with consorcio picture and contact infos

--- a/index.html
+++ b/index.html
@@ -36,13 +36,9 @@
                 <!-- Widgets Produtos Cepea - www.cepea.esalq.com.br/br/widget.aspx -->
 <script type="text/javascript" src="https://www.cepea.esalq.usp.br/br/widgetproduto.js.php?fonte=verdana&tamanho=12&largura=200px&corfundo=dbd6b2&cortexto=333333&corlinha=ede7bf&id_indicador%5B%5D=53&id_indicador%5B%5D=3&id_indicador%5B%5D=2&id_indicador%5B%5D=12&id_indicador%5B%5D=92&id_indicador%5B%5D=77"></script>
                 <br>
-                <img src="fotos/aviso.jpeg" width="275px">
+                <img src="fotos/consorcio2.jpeg" width="275px">
             </div>
     </main>
-
-    <div class="divFerias">
-        ATENÇÃO!! ESTAREMOS DE FÉRIAS DO DIA 20/12/21 ATÉ 04/01/2022!!
-        </div>
 
     <div style="background-color: #005C2A; color: #005C2A; padding: 4px; width: 1895px;"></div> 
 
@@ -66,7 +62,7 @@
             document.getElementById('data-hora').innerHTML = dataHora;
         }, 1000);
     </script>
-    <!-- <b>Comercial: <img src="icones/wpp.png" width="20px"> (18) 99641-6309 -- Peças: <img src="icones/wpp.png" width="20px"> (18) 99652-3598</b> -->
+    <b>Comercial: <img src="icones/wpp.png" width="20px"> (18) 99641-6309 -- Peças: <img src="icones/wpp.png" width="20px"> (18) 99652-3598</b>
 </div>
 <!-- <div class="meuNome"> -->
     <!-- Feito por: Felipe Freitas -->
